# rv32i

./: .clangd  .gitignore  CMakeLists.txt  README.md
cache_src/: CMakeLists.txt  README.md
cache_src/include/: cache_model.hpp  ideal_cache.hpp  lfu_cache.hpp
cache_src/src/: cache_model.cpp  ideal_cache.cpp  lfu_cache.cpp
cache_src/test/: data_on_optimisation.txt  data_on_optimisation_2.txt  test.txt
cache_src/tests/: test_lfu.cpp
include/: alu.hpp  config.hpp  cpu.hpp  csr_file.hpp  decoder.hpp  disasm.hpp  dumper.hpp  instr_builder.hpp  isa.hpp  memory.hpp  memory_model.hpp  register.hpp  register_file.hpp  registers.hpp  rv_model.hpp  types.hpp
src/: alu.cpp  cpu.cpp  csr_file.cpp  decoder.cpp  main.cpp  memory.cpp  memory_model.cpp  register_file.cpp  registers.cpp  rv_model.cpp  test.cpp
tests/: test.cpp
